--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config ./proxy.json --live-reload false",
+    "start": "node server.js",
+    "start-old": "ng serve --proxy-config ./proxy.json --live-reload false",
     "server": "./node_modules/.bin/ts-node ./server/server.ts",
     "build": "ng build",
     "start:prod": "ng build --prod && cd dist && http-server -c-1 -P http://localhost:9000 .",
@@ -32,22 +33,26 @@
     "command-line-args": "^4.0.6",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "express": "^4.16.4",
     "http-server": "^0.10.0",
     "moment": "^2.18.1",
-    "nodemon": "^1.11.0",
+    "nodemon": "^1.18.10",
+    "path": "^0.12.7",
     "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.0.0-rc.0",
     "web-push": "^3.2.5",
-    "zone.js": "^0.8.26",
-    "rxjs-compat": "^6.0.0-rc.0"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "^7.0.1",
-    "@angular/compiler-cli": "^7.0.0",
+    "@angular/compiler-cli": "^7.2.12",
     "@angular/language-service": "^7.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "~4.2.0",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -59,7 +64,10 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~3.1.3",
-    "@angular-devkit/build-angular": "~0.10.0"
+    "typescript": "~3.1.3"
+  },
+  "engines": {
+    "node": "v10.15.3",
+    "npm": "6.4.1"
   }
 }
