--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js",
     "start-old": "ng serve --proxy-config ./proxy.json --live-reload false",
     "server": "./node_modules/.bin/ts-node ./server/server.ts",
-    "build": "ng build",
+    "build-old": "ng build",
+    "build": "ng build --prod",
     "start:prod": "ng build --prod && cd dist && http-server -c-1 -P http://localhost:9000 .",
     "test": "ng test",
     "lint": "ng lint",
